cluster/apps/pihole2/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pihole
  labels:
    app: pihole
spec:
  replicas: 1   # Valor por defecto (override con patch)
  selector:
    matchLabels:
      app: pihole
  template:
    metadata:
      labels:
        app: pihole
    spec:
      containers:
        - name: pihole
          image: "pihole/pihole:2025.05.1"
          ports:
            - containerPort: 80
          volumeMounts:
            - name: pihole-data
              mountPath: /etc/pihole
            - name: dnsmasq-data
              mountPath: /etc/dnsmasq.d
      volumes:
        - name: pihole-data
          persistentVolumeClaim:
            claimName: pihole-data-pvc
        - name: dnsmasq-data
          emptyDir: {}
