cluster/apps/pihole2/base/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pihole-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`ToBePatched.foo.bar`)
      kind: Rule
      priority: 10
      services:
        - name: http
          port: 80
